# linux-code

./: README.en.md  README.md  alarm  alarm.c  ctrlc  ctrlc.c  make.sh  printdir.c  thread3.c  thread6.c  thread7.c  thread8.c
IPC/: CMakeLists.txt  make.sh
IPC/code-out/: hello_cmake
IPC/include/: hello.h
IPC/src/: hello.c  main.c
msg/: make.sh  msg1.c  msg2.c
pipe/: make.sh  pipe1.c  pipe2.c  pipe3.c  pipe4.c  popen1.c  popen2.c  popen3.c  popen4.c
shm/: CMakeLists.txt
shm/code-out/: shm  shm1  shm2
shm/include/: shm.h
shm/src/: shm1.c  shm2.c
socket/: client.c  make.sh  server.c
thread/: make.sh  thread1.c  thread2.c  thread4.c  thread5.c
